--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,49 @@
-click==7.1.2
-Flask==1.1.2
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-Werkzeug==1.0.1
+attrs==24.2.0
+blinker==1.8.2
+Brotli==1.1.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+ConfigArgParse==1.7
+coverage==7.6.4
+Flask==3.0.3
+Flask-Cors==5.0.0
+Flask-Login==0.6.3
+gevent==24.10.3
+geventhttpclient==2.3.1
+greenlet==3.1.1
+h11==0.14.0
+idna==3.10
+iniconfig==2.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+locust==2.32.0
+MarkupSafe==3.0.2
+msgpack==1.1.0
+outcome==1.3.0.post0
+packaging==24.1
+pluggy==1.5.0
+psutil==6.1.0
+PySocks==1.7.1
+pytest==8.3.3
+pytest-base-url==2.1.0
+pytest-html==4.1.1
+pytest-metadata==3.1.1
+pytest-selenium==4.1.0
+pytest-variables==3.1.0
+pyzmq==26.2.0
+requests==2.32.3
+selenium==4.25.0
+setuptools==75.2.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+tenacity==9.0.0
+trio==0.27.0
+trio-websocket==0.11.1
+typing_extensions==4.12.2
+urllib3==2.2.3
+websocket-client==1.8.0
+Werkzeug==3.0.4
+wsproto==1.2.0
+zope.event==5.0
+zope.interface==7.1.0
